--- a/m.html
+++ b/m.html
@@ -24,7 +24,6 @@
             overflow-y: auto;
             scroll-snap-type: y mandatory;
             -webkit-overflow-scrolling: touch;
-            display: none; /* Hidden initially */
         }
 
         .video-container {
@@ -123,25 +122,9 @@
             opacity: 0;
             transition: opacity 0.9s ease-in-out;
         }
-
-        #loading-screen {
-            position: fixed;
-            top: 0;
-            left: 0;
-            width: 100%;
-            height: 100vh;
-            background-color: #000;
-            display: flex;
-            justify-content: center;
-            align-items: center;
-            color: white;
-            font-size: 24px;
-            z-index: 20;
-        }
     </style>
 </head>
 <body>
-    <div id="loading-screen">Loading: 0%</div>
     <div id="reels-container"></div>
     
     <div class="fixed-overlay">
@@ -162,9 +145,7 @@
         const AUDIO_PERSISTENCE_DURATION = 30 * 60 * 1000;
         const CACHE_NAME = 'reels-cache-v1';
         let allReels = [];
-        let currentReels = [];
-        const VIDEOS_PER_BATCH = 20;
-        let currentBatchStart = 0;
+        let currentIndex = 0;
 
         // URL se reelId extract karna
         const urlParams = new URLSearchParams(window.location.search);
@@ -199,39 +180,18 @@
                     await cache.put(url, response.clone());
                     return url;
                 }
-                return url; // Fail hone par bhi URL return karo
+                return url;
             } catch (error) {
                 console.error(`Cache fetch failed for ${url}:`, error);
                 return url;
             }
         }
 
-        function shuffleArray(array) {
-            for (let i = array.length - 1; i > 0; i--) {
-                const j = Math.floor(Math.random() * (i + 1));
-                [array[i], array[j]] = [array[j], array[i]];
-            }
-            return array;
-        }
-
-        async function updateLoadingScreen(percent) {
-            const loadingScreen = document.getElementById('loading-screen');
-            loadingScreen.textContent = `Loading: ${percent}%`;
-        }
-
-        async function showLoadingScreen() {
-            const loadingScreen = document.getElementById('loading-screen');
-            const reelsContainer = document.getElementById('reels-container');
-            loadingScreen.style.display = 'flex';
-            reelsContainer.style.display = 'none';
-        }
-
-        async function hideLoadingScreen() {
-            const loadingScreen = document.getElementById('loading-screen');
-            const reelsContainer = document.getElementById('reels-container');
-            loadingScreen.style.display = 'none';
-            reelsContainer.style.display = 'flex';
-        }
+        const container = document.getElementById('reels-container');
+        const profilePic = document.getElementById('profile-pic');
+        const usernameText = document.getElementById('username-text');
+        const verifyBadge = document.getElementById('verify-badge');
+        const title = document.getElementById('title');
 
         Promise.all([
             fetch('profiles.json').then(res => res.ok ? res.json() : ({ profiles: [] })).catch(() => ({ profiles: [] })),
@@ -240,27 +200,17 @@
         .then(([profilesData, reelsData]) => {
             const profiles = profilesData.profiles || [];
             allReels = reelsData.reels || [];
-            currentReels = shuffleArray([...allReels]);
 
-            if (currentReels.length === 0) {
-                document.getElementById('reels-container').innerHTML = '<div style="color: white; text-align: center; padding-top: 50%;">No reels available.</div>';
-                document.getElementById('loading-screen').style.display = 'none';
+            if (allReels.length === 0) {
+                container.innerHTML = '<div style="color: white; text-align: center; padding-top: 50%;">No reels available.</div>';
                 return;
             }
 
-            // URL mein reelId ke hisaab se initial batch set karna
+            // Initial reel set karna
             if (initialReelId) {
-                const initialReelIndex = currentReels.findIndex(reel => reel.reelId === initialReelId);
-                if (initialReelIndex !== -1) {
-                    currentBatchStart = Math.floor(initialReelIndex / VIDEOS_PER_BATCH) * VIDEOS_PER_BATCH;
-                }
+                currentIndex = allReels.findIndex(reel => reel.reelId === initialReelId);
+                if (currentIndex === -1) currentIndex = 0; // Agar reelId nahi mila to pehla reel
             }
-
-            const container = document.getElementById('reels-container');
-            const profilePic = document.getElementById('profile-pic');
-            const usernameText = document.getElementById('username-text');
-            const verifyBadge = document.getElementById('verify-badge');
-            const title = document.getElementById('title');
 
             function getProfileById(id) {
                 return profiles.find(profile => profile.id === id) || { 
@@ -282,9 +232,7 @@
                 video.dataset.index = index;
                 video.dataset.title = reel.title;
 
-                // Test ke liye sample video URL, tum apna URL daal dena
-                const mediaUrl = reel.media === "video.com/1.mp4" ? "https://sample-videos.com/video123/mp4/720/big_buck_bunny_720p_1mb.mp4" : reel.media;
-                const cachedUrl = await fetchAndCache(mediaUrl);
+                const cachedUrl = await fetchAndCache(reel.media);
                 video.src = cachedUrl;
 
                 const loader = document.createElement('div');
@@ -297,7 +245,7 @@
 
                 video.addEventListener('canplay', () => {
                     loader.style.display = 'none';
-                    if (index === currentBatchStart) {
+                    if (parseInt(video.dataset.index) === currentIndex) {
                         video.play().catch(error => console.log("Initial play error:", error));
                         updateMetadata(reel);
                     }
@@ -333,37 +281,6 @@
                 return div;
             }
 
-            async function preloadVideoSources(startIndex) {
-                const endIndex = Math.min(startIndex + VIDEOS_PER_BATCH, currentReels.length);
-                const batchReels = currentReels.slice(startIndex, endIndex);
-                const total = batchReels.length;
-                let loaded = 0;
-
-                await showLoadingScreen();
-                container.innerHTML = '';
-
-                for (let i = 0; i < total; i++) {
-                    const reel = batchReels[i];
-                    const index = startIndex + i;
-                    const videoElement = await createVideoElement(reel, index);
-                    if (videoElement) {
-                        container.appendChild(videoElement);
-                    }
-                    loaded++;
-                    const percent = Math.floor((loaded / total) * 100);
-                    await updateLoadingScreen(percent);
-                }
-
-                if (container.children.length === 0) {
-                    container.innerHTML = '<div style="color: white; text-align: center; padding-top: 50%;">No valid videos available.</div>';
-                    await hideLoadingScreen();
-                    return false;
-                }
-
-                await hideLoadingScreen();
-                return true;
-            }
-
             function updateMetadata(reel) {
                 fullTitle = reel.title;
                 title.innerText = reel.title;
@@ -375,13 +292,28 @@
                 verifyBadge.style.display = profileData.verified ? "inline" : "none";
             }
 
+            async function loadCurrentReel() {
+                container.innerHTML = ''; // Clear previous content
+                const reel = allReels[currentIndex];
+                const videoElement = await createVideoElement(reel, currentIndex);
+                container.appendChild(videoElement);
+                // Next reel preload ke liye placeholder
+                if (currentIndex + 1 < allReels.length) {
+                    const placeholder = document.createElement('div');
+                    placeholder.className = 'video-container';
+                    container.appendChild(placeholder);
+                }
+            }
+
             function enableScrollPlayback() {
                 let currentVideo = null;
                 const observer = new IntersectionObserver((entries) => {
                     entries.forEach(entry => {
-                        const video = entry.target;
-                        const loader = video.parentElement.querySelector('.video-loader');
+                        const video = entry.target.querySelector('video');
+                        if (!video) return; // Placeholder ke liye skip
+
                         const index = parseInt(video.dataset.index);
+                        const loader = entry.target.querySelector('.video-loader');
 
                         if (entry.isIntersecting) {
                             if (currentVideo && currentVideo !== video) {
@@ -402,14 +334,16 @@
                                     });
                             }
 
-                            const reel = currentReels[index];
+                            const reel = allReels[index];
                             if (reel) {
                                 updateMetadata(reel);
                                 window.history.pushState({}, document.title, `/Instagram/?reelId=${reel.reelId}`);
                             }
 
-                            if (index === currentBatchStart + VIDEOS_PER_BATCH - 1) {
-                                loadNextBatch();
+                            // Next reel load karna agar scroll kiya
+                            if (index === currentIndex && index + 1 < allReels.length) {
+                                currentIndex++;
+                                loadNextReel();
                             }
                         } else if (video !== currentVideo) {
                             video.pause();
@@ -418,23 +352,15 @@
                     });
                 }, { threshold: 0.7 });
 
-                const videos = document.querySelectorAll("video");
-                videos.forEach(video => observer.observe(video));
+                const containers = document.querySelectorAll(".video-container");
+                containers.forEach(container => observer.observe(container));
             }
 
-            async function loadNextBatch() {
-                currentBatchStart += VIDEOS_PER_BATCH;
-                if (currentBatchStart < currentReels.length) {
-                    const success = await preloadVideoSources(currentBatchStart);
-                    if (success) {
-                        enableScrollPlayback();
-                    }
-                } else {
-                    currentBatchStart = 0;
-                    currentReels = shuffleArray([...allReels]);
-                    await preloadVideoSources(currentBatchStart);
-                    enableScrollPlayback();
-                }
+            async function loadNextReel() {
+                const reel = allReels[currentIndex];
+                const videoElement = await createVideoElement(reel, currentIndex);
+                container.replaceChild(videoElement, container.children[1]); // Placeholder replace karo
+                enableScrollPlayback();
             }
 
             function showFullTitle() {
@@ -457,14 +383,11 @@
             }
 
             // Initial load
-            preloadVideoSources(currentBatchStart).then(success => {
-                if (success) enableScrollPlayback();
-            });
+            loadCurrentReel().then(() => enableScrollPlayback());
         })
         .catch(error => {
             console.error('Error loading data:', error);
-            document.getElementById('reels-container').innerHTML = '<div style="color: white; text-align: center; padding-top: 50%;">Failed to load reels.</div>';
-            document.getElementById('loading-screen').style.display = 'none';
+            container.innerHTML = '<div style="color: white; text-align: center; padding-top: 50%;">Failed to load reels.</div>';
         });
     </script>
 </body>
